Added Realm and made some improvements for the App

--- a/ArtistHunt/ArtistHunt/Base.lproj/Main.storyboard
+++ b/ArtistHunt/ArtistHunt/Base.lproj/Main.storyboard
@@ -120,7 +120,7 @@
         <!--Login View Controller-->
         <scene sceneID="Ujl-Rd-22D">
             <objects>
-                <viewController storyboardIdentifier="loginVC" title="Login View Controller" id="r7y-2Q-JTu" customClass="LoginViewController" customModule="ArtistHunt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Login View Controller" id="r7y-2Q-JTu" customClass="LoginViewController" customModule="ArtistHunt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k8J-Z8-bVr">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -134,14 +134,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Zk-oQ-zAx">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Zk-oQ-zAx">
                                 <rect key="frame" x="32" y="271.5" width="256" height="40"/>
-                                <color key="backgroundColor" white="0.09110124143835617" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.091101241439999994" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="yFL-ES-Erj"/>
                                     <constraint firstAttribute="height" constant="40" id="ykt-2r-RnL"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Sign In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -251,13 +249,12 @@
                                     <action selector="goBackToLogin:" destination="1wx-Ys-1Ht" eventType="touchUpInside" id="chL-i3-Lw9"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhq-vz-QNL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhq-vz-QNL">
                                 <rect key="frame" x="32" y="416" width="256" height="40"/>
                                 <color key="backgroundColor" white="0.091101241439999994" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="bYi-ja-oo1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Sign Up">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -374,7 +371,7 @@
         <!--Navigation Controller-->
         <scene sceneID="4gs-Fy-J2c">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="gda-cA-9AC" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="loginVC" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="gda-cA-9AC" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="EMH-Re-dBc">
                         <autoresizingMask key="autoresizingMask"/>
