--- a/ArtistHunt/ArtistHunt/Base.lproj/Main.storyboard
+++ b/ArtistHunt/ArtistHunt/Base.lproj/Main.storyboard
@@ -19,14 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="First View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="85" y="262.5" width="150.5" height="43"/>
+                                <rect key="frame" x="84.5" y="262.5" width="151" height="43"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <rect key="frame" x="63" y="313.5" width="194.5" height="17"/>
+                                <rect key="frame" x="62.5" y="313.5" width="195" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -78,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ibf-dt-MXS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="1065.5172413793105"/>
+            <point key="canvasLocation" x="1748" y="1119"/>
         </scene>
         <!--Posts-->
         <scene sceneID="wg7-f3-ORb">
@@ -88,26 +88,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="59.5" y="262.5" width="201.5" height="43"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <rect key="frame" x="52.5" y="313.5" width="215" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HYa-XT-R20">
+                                <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PvK-0D-LZI">
+                                    <size key="itemSize" width="320" height="432"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="postCell" id="MsE-uo-y51" customClass="PostCollectionViewCell" customModule="ArtistHunt" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ueO-Y6-AT1">
+                                                    <rect key="frame" x="0.0" y="46" width="320" height="320"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="ueO-Y6-AT1" secondAttribute="height" multiplier="1:1" id="TIR-lA-YmV"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This Is a Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dzi-QE-L96">
+                                                    <rect key="frame" x="8" y="8" width="200" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                    <color key="textColor" white="0.091101241439999994" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="dd/MM/YYY  HH:mm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59c-Wg-Kuk">
+                                                    <rect key="frame" x="216" y="0.0" width="96" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="rIl-Wd-jCe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a description so you can see what this cell will become" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cd6-qh-qGs">
+                                                    <rect key="frame" x="16" y="382" width="288" height="26"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="ueO-Y6-AT1" secondAttribute="trailing" id="7Tc-2l-dMu"/>
+                                            <constraint firstItem="dzi-QE-L96" firstAttribute="leading" secondItem="MsE-uo-y51" secondAttribute="leading" constant="8" id="7aA-Zr-Mq3"/>
+                                            <constraint firstItem="59c-Wg-Kuk" firstAttribute="leading" secondItem="dzi-QE-L96" secondAttribute="trailing" constant="8" id="EY8-hc-Zd3"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="cd6-qh-qGs" secondAttribute="trailing" constant="8" id="GzY-O0-gpi"/>
+                                            <constraint firstItem="59c-Wg-Kuk" firstAttribute="top" secondItem="MsE-uo-y51" secondAttribute="top" id="M6C-5H-JaW"/>
+                                            <constraint firstItem="ueO-Y6-AT1" firstAttribute="top" secondItem="59c-Wg-Kuk" secondAttribute="bottom" constant="16" id="NBE-Oh-Hnl"/>
+                                            <constraint firstItem="cd6-qh-qGs" firstAttribute="top" secondItem="ueO-Y6-AT1" secondAttribute="bottom" constant="16" id="Xlq-id-9pI"/>
+                                            <constraint firstItem="ueO-Y6-AT1" firstAttribute="leading" secondItem="MsE-uo-y51" secondAttribute="leading" id="cDt-AG-fWB"/>
+                                            <constraint firstAttribute="trailing" secondItem="59c-Wg-Kuk" secondAttribute="trailing" constant="8" id="d25-fv-Fzn"/>
+                                            <constraint firstItem="dzi-QE-L96" firstAttribute="top" secondItem="MsE-uo-y51" secondAttribute="top" constant="8" id="l8M-TH-DSw"/>
+                                            <constraint firstItem="cd6-qh-qGs" firstAttribute="leading" secondItem="MsE-uo-y51" secondAttribute="leadingMargin" constant="8" id="lJa-C4-4IA"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="cd6-qh-qGs" secondAttribute="bottom" constant="16" id="xu4-1P-2aE"/>
+                                        </constraints>
+                                        <size key="customSize" width="320" height="432"/>
+                                        <connections>
+                                            <outlet property="post_date" destination="59c-Wg-Kuk" id="aHP-ve-ime"/>
+                                            <outlet property="post_description" destination="cd6-qh-qGs" id="Nn5-V5-5U9"/>
+                                            <outlet property="post_image" destination="ueO-Y6-AT1" id="FxZ-kI-PzM"/>
+                                            <outlet property="post_title" destination="dzi-QE-L96" id="5GC-ZD-0p9"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="8rJ-Kc-sve" id="eLa-DY-J2n"/>
+                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="jda-en-D70"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="8" symbolic="YES" id="Day-4N-Vmt"/>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="JgO-Fn-dHn"/>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
+                            <constraint firstItem="HYa-XT-R20" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="PxT-FN-dg5"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="HYa-XT-R20" secondAttribute="trailing" id="k3K-ct-q74"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="HYa-XT-R20" secondAttribute="bottom" id="qqR-P0-vCW"/>
+                            <constraint firstItem="HYa-XT-R20" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="sM2-Fm-rJn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
